# ConteoVectorial

./: .gitignore  README.md  SMVP_Architecture.md  settings.gradle.kts
.github/workflows/: android_build.yml  deepseek-writer.yml  generate_zip.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: README.txt  yolov8_pose.param  yolov8_pose.tflite
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native_vision_bridge.cpp
app/src/main/cpp/ncnn/arm64-v8a/include/ncnn/: platform.h
app/src/main/cpp/ncnn/arm64-v8a/lib/cmake/ncnn/: ncnn.cmake
app/src/main/java/com/desdelaire/vectorcount/: HomeActivity.kt  MainActivity.kt  SmvpApplication.kt
app/src/main/java/com/desdelaire/vectorcount/hitl/: HitlOverlayView.kt  HitlValidationActivity.kt  KeypointCanvasView.kt
app/src/main/java/com/desdelaire/vectorcount/logging/: FlightValidationLoggerService.kt
app/src/main/java/com/desdelaire/vectorcount/nativebridge/: NativeVisionBridge.kt
app/src/main/java/com/desdelaire/vectorcount/telemetry/: TelemetryManager.kt
app/src/main/java/com/desdelaire/vectorcount/video/: DjiVideoStreamRepository.kt
app/src/main/java/com/desdelaire/vectorcount/vision/: VisionProcessor.kt
app/src/main/java/com/paisano/conteovectorial/: MainActivity.kt  SmvpApplication.kt
app/src/main/java/com/paisano/conteovectorial/hitl/: HitlOverlayView.kt  HitlValidationActivity.kt  KeypointCanvasView.kt
app/src/main/java/com/paisano/conteovectorial/logging/: FlightValidationLoggerService.kt
app/src/main/java/com/paisano/conteovectorial/msdk/: MsdkManager.kt
app/src/main/java/com/paisano/conteovectorial/nativebridge/: NativeVisionBridge.kt
app/src/main/java/com/paisano/conteovectorial/video/: DjiVideoStreamRepository.kt
app/src/main/java/com/paisano/conteovectorial/vision/: VisionProcessor.kt
app/src/main/res/drawable/: bg_capture_button.xml  bg_circle_button.xml  bg_minimap.xml  bg_panel_dark.xml  ic_autofocus.xml  ic_capture.xml  ic_compass.xml  ic_drone.xml  ic_gimbal.xml  ic_takeoff.xml
app/src/main/res/layout/: activity_hitl_validation.xml  activity_home.xml  activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
